--- a/privilegeservice/src/main/resources/application-dev.yaml
+++ b/privilegeservice/src/main/resources/application-dev.yaml
@@ -2,13 +2,11 @@ spring:
   boot:
     admin:
       client:
-        url: http://localhost:8081
+        url: http://172.16.2.193:8081
   datasource:
-    url: jdbc:mysql://47.115.162.144:3306/oomall?serverTimezone=GMT%2B8
-    #url: jdbc:mysql://domi.xqchen.site:3360/oomall?serverTimezone=GMT%2B8
-    username: OOMall
-    #username: dbuser
-    password: 1234567
+    url: jdbc:mysql://172.16.4.159:3306/oomall?serverTimezone=GMT%2B8
+    username: dbuser
+    password: 123456
     druid:
       stat-view-servlet:
         login-username: admin
