--- a/privilegeservice/src/main/resources/application.yaml
+++ b/privilegeservice/src/main/resources/application.yaml
@@ -5,55 +5,25 @@ management:
         include: "*"
 
 server:
-  port: 8081
+  port: 8083
   tomcat:
     threads:
       max: 1000
 
-
-dubbo:
-  # 配置服务信息
-  application:
-    name: privilege-service
-    # 禁用QOS同一台机器可能会有端口冲突现象
-    qos-enable: false
-    qos-accept-foreign-ip: false
-  # 配置注册中心
-  registry:
-    address: nacos://47.115.162.144:8847
-  # 设置协议-协议由提供方指定消费方被动接受
-  protocol:
-    name: dubbo
-    port: 20889
-    # 设置超时时间
-  consumer:
-    timeout: 4000
-    check: false
-
 spring:
-  main:
-    # 解决Bean重复定义问题
-    allow-bean-definition-overriding: true
   application:
     name: privilege-service
   profiles:
-  #active: dev
-  servlet:
-    multipart:
-      #是否使用http上传
-      enabled: true
-      #最大请求文件的大小
-      max-request-size: 10MB
-
+    active: dev
+  cloud:
+    nacos:
+      username: nacos
+      password: 1-6123
+      discovery:
+        server-addr: 172.16.2.193:8848
   datasource:
-    url: jdbc:mysql://47.115.162.144:3306/oomall?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
-    username: OOMall
-    password: 1234567
     driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
-    initialization-mode: always
-    schema: classpath:schema.sql
-    data: classpath:testdata.sql
     druid:
       #初始化时建立物理连接的个数
       initial-size: 3
@@ -71,24 +41,21 @@ spring:
           slow-sql-millis: 100
       validation-query: select 1
     sql-script-encoding: UTF-8
-
   redis:
     # Redis数据库索引（默认为0）
     database: 0
     #连接池最大连接数（使用负值表示没有限制）
-    jedis:
+    lettuce:
       pool:
-        max-active: 8
-        max-wait: -1ms
-        max-idle: 8
+        max-active: 100
+        # 连接池中的最大空闲连接
+        max-idle: 100
+        # 连接池中的最小空闲连接
         min-idle: 0
-    timeout: 8000
-    host: 47.115.162.144
-    port: 6379
-    password: 1234567
-  cloud:
-    nacos:
-      server-addr: 47.115.162.144:8847
+        #连接池最大阻塞等待时间（使用负值表示没有限制）
+        max-wait: -1
+    # 连接超时时间（毫秒）
+    timeout: 5000
 
 mybatis:
   #po对象的包
@@ -105,12 +72,9 @@ privilegeservice:
   #是否对数据库中的未初始化的数据初始化
   initialization: false
   #分布式锁失效时间（秒）
-  lockerExpireTime: 30
-  #dav信息配置
-  dav:
-    username: other
-    password: 123456
-    baseUrl: http://106.52.203.83/webdav/
+  lockerExpireTime: my
+  #图片存储位置
+  imglocation: ./img
   user:
     # user的权限字在Redis中失效秒数
     expiretime: 600
@@ -122,6 +86,10 @@ privilegeservice:
     multiply: false
     #jwt过期的时间(秒)
     jwtExpire: 3600
+  dav:
+    username: hellobaby
+    password: hello
+    baseUrl: http://172.16.3.184/webdav/
 
 
 #pagehelper分页插件配置
@@ -129,6 +97,48 @@ pagehelper:
   helper-dialect: mysql
 
 
+dubbo:
+  # 配置服务信息
+  application:
+    name: privilege-service
+    # 禁用QOS同一台机器可能会有端口冲突现象
+    qos-enable: false
+    qos-accept-foreign-ip: false
+  scan:
+    # dubbo 服务扫描基准包
+    base-packages: cn.edu.xmu.privilege.service
+  protocol:
+    # dubbo 协议
+    name: dubbo
+    # dubbo 协议端口（ -1 表示自增端口，从 20880 开始）
+    port: -1
+  cloud:
+    subscribed-services: flashsale-service, groupon-service, presale-service, goods-service,privilege-service,other-service,order-service
+  registry:
+    address: nacos://172.16.2.193:8848
+
+
+couponservice:
+  #是否对数据库中的未初始化的数据初始化
+  initialization: false
+  imglocation: http://172.16.3.184/webdav/
+  dav:
+    username: hellobaby
+    password: hello
+    baseUrl: http://172.16.3.184/webdav/
+
+rocketmq:
+  # 指定namesrv地址
+  name-server: 172.16.2.193:9876
+  producer:
+    #生产者group名称
+    group: producer_group
+    #一次发送多少数量消息
+    max-message-size: 4096
+    #发送消息超时时间,默认3000
+    send-message-timeout: 3000
+    #发送消息失败重试次数，默认2
+    retry-times-when-send-async-failed: 2
 
 
 
