--- a/flashsaleservice/src/main/resources/application-dev.yaml
+++ b/flashsaleservice/src/main/resources/application-dev.yaml
@@ -15,6 +15,6 @@ spring:
         url-pattern: /druid/*
   redis:
     # Redis服务器地址
-    host: localhost
+    host: 172.16.2.193
     # Redis服务器连接端口
     port: 6379
