--- a/flashsaleservice/src/main/resources/application.yaml
+++ b/flashsaleservice/src/main/resources/application.yaml
@@ -20,7 +20,7 @@ spring:
       username: nacos
       password: 1-6123
       discovery:
-        server-addr: localhost:8848
+        server-addr: 172.16.2.193:8848
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
@@ -89,7 +89,7 @@ flashsaleservice:
   dav:
     username: hellobaby
     password: hello
-    baseUrl: http://192.168.233.128/webdav/
+    baseUrl: http://172.16.3.184/webdav/
 
 
 #pagehelper分页插件配置
@@ -113,23 +113,23 @@ dubbo:
     # dubbo 协议端口（ -1 表示自增端口，从 20880 开始）
     port: -1
   cloud:
-    subscribed-services: goods-service,privilege-service,other-service,order-service
+    subscribed-services: flashsale-service, groupon-service, presale-service, goods-service,privilege-service,other-service,order-service
   registry:
-    address: nacos://localhost:8848
+    address: nacos://172.16.2.193:8848
 
 
 couponservice:
   #是否对数据库中的未初始化的数据初始化
   initialization: false
-  imglocation: http://192.168.233.128/webdav/
+  imglocation: http://172.16.3.184/webdav/
   dav:
     username: hellobaby
     password: hello
-    baseUrl: http://192.168.233.128/webdav/
+    baseUrl: http://172.16.3.184/webdav/
 
 rocketmq:
   # 指定namesrv地址
-  name-server: localhost:9876
+  name-server: 172.16.2.193:9876
   producer:
     #生产者group名称
     group: producer_group
