--- a/privilegeservice/src/main/resources/application-dev.yaml
+++ b/privilegeservice/src/main/resources/application-dev.yaml
@@ -2,7 +2,7 @@ spring:
   boot:
     admin:
       client:
-        url: http://172.16.2.193:8081
+        url: http://172.16.3.184:8081
   datasource:
     url: jdbc:mysql://172.16.4.159:3306/oomall?serverTimezone=GMT%2B8
     username: dbuser
@@ -15,7 +15,7 @@ spring:
         url-pattern: /druid/*
   redis:
     # Redis服务器地址
-    host: 47.115.162.144
+    host: 172.16.2.193
     # Redis服务器连接端口
     port: 6379
-    password: 1234567
+#    password: 1234567
